--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>public-template-face</title>
+    <title>griffles-face</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.5/dist/mindar-face.prod.js"></script>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
@@ -26,7 +26,7 @@
             <a-asset-item id="tail" src="tail.gltf"></a-asset-item>
         </a-assets>
         <a-camera active="false" position="0 0 0" look-controls-enabled="false"></a-camera>
-        <a-entity mindar-face-target="anchorIndex: 1">
+        <a-entity mindar-face-target="anchorIndex: 1"> 
 	        <a-image src="#Griffles" position="0.17 -0.2 0.1" scale="2.7 2.7 2.7"></a-image>
         </a-entity>
         <a-entity mindar-face-target="anchorIndex: 11">
